// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Container) OasisTrade should render 1`] = `
<main>
  <OasisMarketWidget
    defaultPeriod="TIME_SPAN/WEEK"
    loadingTradeHistory={true}
    tradedTokens={
      Immutable.List [
        Immutable.Map {
          base: "MKR",
          quote: "W-ETH",
          priority: 10,
        },
        Immutable.Map {
          base: "W-ETH",
          quote: "SAI",
          priority: 9,
        },
        Immutable.Map {
          base: "MKR",
          quote: "SAI",
          priority: 8,
        },
        Immutable.Map {
          base: "W-GNT",
          quote: "W-ETH",
          priority: 0,
        },
        Immutable.Map {
          base: "DGD",
          quote: "W-ETH",
          priority: 0,
        },
        Immutable.Map {
          base: "REP",
          quote: "W-ETH",
          priority: 0,
        },
        Immutable.Map {
          base: "ICN",
          quote: "W-ETH",
          priority: 0,
        },
        Immutable.Map {
          base: "1ST",
          quote: "W-ETH",
          priority: 0,
        },
        Immutable.Map {
          base: "SNGLS",
          quote: "W-ETH",
          priority: 0,
        },
        Immutable.Map {
          base: "VSL",
          quote: "W-ETH",
          priority: 0,
        },
        Immutable.Map {
          base: "PLU",
          quote: "W-ETH",
          priority: 0,
        },
        Immutable.Map {
          base: "MLN",
          quote: "W-ETH",
          priority: 0,
        },
        Immutable.Map {
          base: "RHOC",
          quote: "W-ETH",
          priority: 0,
        },
        Immutable.Map {
          base: "TIME",
          quote: "W-ETH",
          priority: 0,
        },
        Immutable.Map {
          base: "GUP",
          quote: "W-ETH",
          priority: 0,
        },
        Immutable.Map {
          base: "BAT",
          quote: "W-ETH",
          priority: 0,
        },
        Immutable.Map {
          base: "NMR",
          quote: "W-ETH",
          priority: 0,
        },
      ]
    }
  />
  <Connect(OasisTradeOrders) />
</main>
`;

exports[`(Container) OasisTrade will receive right actions 1`] = `
Object {
  "actions": Object {
    "setActiveTradingPair": [Function],
  },
}
`;

exports[`(Container) OasisTrade will receive right props 1`] = `
Object {
  "activeTradingPair": null,
  "defaultPeriod": "TIME_SPAN/WEEK",
  "loadingTradeHistory": true,
  "marketsData": undefined,
  "tradedTokens": Immutable.List [
    Immutable.Map {
        base: "MKR",
        quote: "W-ETH",
        priority: 10,
    },
    Immutable.Map {
        base: "W-ETH",
        quote: "SAI",
        priority: 9,
    },
    Immutable.Map {
        base: "MKR",
        quote: "SAI",
        priority: 8,
    },
    Immutable.Map {
        base: "W-GNT",
        quote: "W-ETH",
        priority: 0,
    },
    Immutable.Map {
        base: "DGD",
        quote: "W-ETH",
        priority: 0,
    },
    Immutable.Map {
        base: "REP",
        quote: "W-ETH",
        priority: 0,
    },
    Immutable.Map {
        base: "ICN",
        quote: "W-ETH",
        priority: 0,
    },
    Immutable.Map {
        base: "1ST",
        quote: "W-ETH",
        priority: 0,
    },
    Immutable.Map {
        base: "SNGLS",
        quote: "W-ETH",
        priority: 0,
    },
    Immutable.Map {
        base: "VSL",
        quote: "W-ETH",
        priority: 0,
    },
    Immutable.Map {
        base: "PLU",
        quote: "W-ETH",
        priority: 0,
    },
    Immutable.Map {
        base: "MLN",
        quote: "W-ETH",
        priority: 0,
    },
    Immutable.Map {
        base: "RHOC",
        quote: "W-ETH",
        priority: 0,
    },
    Immutable.Map {
        base: "TIME",
        quote: "W-ETH",
        priority: 0,
    },
    Immutable.Map {
        base: "GUP",
        quote: "W-ETH",
        priority: 0,
    },
    Immutable.Map {
        base: "BAT",
        quote: "W-ETH",
        priority: 0,
    },
    Immutable.Map {
        base: "NMR",
        quote: "W-ETH",
        priority: 0,
    },
],
  "validBaseTokensList": Immutable.List [
    "W-GNT",
    "DGD",
    "REP",
    "ICN",
    "1ST",
    "SNGLS",
    "VSL",
    "PLU",
    "MLN",
    "RHOC",
    "TIME",
    "GUP",
    "BAT",
    "NMR",
],
  "validQuoteTokensList": Immutable.List [
    "W-ETH",
],
}
`;
